more project.clj update